# webplattform

./: .babelrc  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .test-s3cfg  CHANGELOG.md  Dockerfile  Dockerfile.build  Dockerfile.dev  Dockerfile.s3cmd  Dockerfile.solr  LICENSE  README.md  asd.srctrldb  asd.srctrlprj  babel.config.js  dll.srctrldb  dll.srctrlprj  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  sample.env  tox.ini  webpack.config.js
dll/: settings.py  urls.py  wsgi.py
dll/cms/: blocks.py  image_formats.py  models.py  urls.py  wagtail_hooks.py
dll/cms/migrations/: 0001_initial.py  0002_auto_20201123_1623.py  0003_frontpage_body.py  0004_auto_20201217_1145.py  0004_auto_20201217_1835.py  0005_initial_menu_migration.py  0006_auto_20220929_1014.py  0007_auto_20220929_1104.py  0008_auto_20221005_2217.py  0009_auto_20230207_1315.py
dll/cms/tests/: test_cms_hooks.py  test_cms_pages.py
dll/communication/: admin.py  apps.py  forms.py  managers.py  models.py  tasks.py  tokens.py  urls.py  utils.py  views.py
dll/communication/migrations/: 0001_initial.py  0002_auto_20190828_1042.py  0002_auto_20190905_1057.py  0002_auto_20190912_1509.py  0002_auto_20190912_1730.py  0003_auto_20200113_1540.py  0004_create_user_password_reset_event_type.py  0005_create_change_email_event_type.py  0006_auto_20220929_1014.py  0006_initial_menu_migration.py  0007_alter_communicationeventtype_from_email.py  0008_review_comm_type.py
dll/communication/tests/: test_coauthorship_invitations.py  test_content_submission.py  test_newsletter_subscription.py  test_user_profile_change.py  test_view_contact.py  test_view_newsletter_subscribe.py
dll/configuration/: celery.py  dll-settings.py  dlt-settings.py  dlt-urls.py  settings.py  settings_dlt.py  test_settings.py  urls.py  urls_dll.py  urls_dlt.py  wsgi.py
dll/configuration/tests/: test_constance_admin.py
dll/content/: __init__.py  admin.py  apps.py  fields.py  filters.py  forms.py  managers.py  models.py  more_like_this.py  rules.py  search_indexes.py  serializers.py  signals.py  tests.py  utils.py  views.py
dll/content/migrations/: 0001_initial.py  0002_auto_20190802_1821.py  0002_auto_20190820_1102.py  0002_auto_20190828_1042.py  0002_auto_20190912_1544.py  0002_auto_20191030_1424.py  0003_auto_20190826_0914.py  0003_auto_20190902_1626.py  0003_auto_20190912_1651.py  0003_auto_20200113_1540.py  0003_content_json_data.py  0003_review_assigned_reviewer.py  0004_auto_20190806_1135.py  0004_auto_20190912_1715.py  0004_teachingmodule_subject_of_tuitiuon_migration.py  0005_auto_20190812_1102.py  0005_auto_20200113_1636.py  0006_auto_20200113_1721.py  0007_auto_20200123_1002.py  0008_auto_20200124_1548.py  0008_auto_20200131_1510.py  0008_auto_20200206_1049.py  0009_fix_missing_created_values.py  0010_auto_20200629_1606.py  0011_auto_20200714_1708.py  0012_auto_20200728_1458.py  0013_competenceadditionalinformation.py  0014_auto_20200803_1511.py  0015_tool_functions_data_migration.py  0016_favorite.py  0017_auto_20200909_1533.py  0018_historicalcontent_historicalteachingmodule_historicaltool_historicaltrend.py  0019_auto_20200917_1544.py  0020_auto_20200921_1616.py  0021_historicalcontent_reason_length.py  0022_auto_20220921_1011.py  0022_auto_20220929_1014.py  0023_auto_20221005_2244.py  0024_tool_potentials_data_migration.py  0025_tool_potentials.py  (+13 more)
dll/content/templatetags/: breadcrumb_tags.py  favored_tag.py  flatpage_tags.py
dll/content/tests/: test_content_creation.py  test_content_views.py  test_favor_content.py  test_review_submission.py  test_search.py  test_share_content.py  test_testimonial.py  test_tool_function_potential_sync.py
dll/fixtures/: help_texts.json  sites.json
dll/general/: apps.py  context_processors.py  managers.py  models.py  signals.py  storage_backends.py  utils.py  youtube_embed_provider.py
dll/general/migrations/: 0001_initial.py  0002_auto_20190802_1821.py  0002_auto_20190802_1929.py  0002_auto_20190820_1102.py  0002_auto_20190828_1042.py  0002_auto_20220929_1014.py
dll/shared_session/: __init__.py  signals.py  views.py
dll/shared_session/templatetags/: shared_session.py
dll/static/css/: wagtail_admin.css
dll/static/fonts/: dll_icons.eot  montserrat.css
dll/survey/: admin.py  apps.py  context_processor.py  forms.py  models.py  serializers.py  views.py
dll/survey/migrations/: 0001_initial.py  0002_auto_20201130_1737.py  0003_trigger_active.py  0004_auto_20201203_1652.py  0005_auto_20210112_1302.py  0006_trigger_target.py  0007_auto_20210210_1904.py  0008_alter_surveyresult_options.py
dll/survey/tests/: test_survey.py  test_trigger.py
dll/templates/: 400.html  403.html  404.html  500.html
dll/templates/admin/: change_form_object_tools.html  newsletter_subscription_changelist.html  publish_change_form.html
dll/templates/dll/: base.html  contact.html  data_privacy.html  default_page.html  development.html  error.html  flatpage.html  home.html  imprint.html  search.html  structure.html  test.html  test_more_like_this.html  usage.html
dll/templates/flatpages/: default.html
dll/templates/overwrites/: categories.html  my_content.html
dll/templates/search_configuration/: schema.xml
dll/user/: admin.py  apps.py  forms.py  models.py  tests.py  tokens.py  urls.py  utils.py  views.py
dll/user/migrations/: 0001_initial.py  (+11 more)
docker/: docker-compose.reviews
s3cmd/: create-backup.sh  s3cfg  setup-s3cmd.sh
solr/: backend.py  schema.xml
solr/conf/: schema.xml  solrconfig.xml
(+294 files in other folders)
