[tool.poetry]
name = "digital.learning.lab"
version = "0.1.0"
description = "The digital.learning.lab is a online platform and understands itself as competence centre for teaching in the digital age. School teachers will find suggestions and inspiration here for further developing their lessons, taking into account the competencies for a digitalised living and working environment."
authors = ["ITBH"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~=3.8"
Django = "3.2.15"
psycopg2 = {version = "2.9.3", extras = ["binary"]}
django-meta = "2.1.0"
django-webpack-loader = "~=1.6.0"
django-extensions = "3.2.1"
django-filer = "2.2.3"
django-polymorphic = "3.0.0"
blessings = "1.7"
curtsies = "0.4.0"
bpython = "0.23"
django-taggit = "1.5.1"
xlrd = "2.0.1"
environs = "9.5.0"
uWSGI = "2.0.20"
easy-thumbnails = "2.8.3"
django-ckeditor = "6.5.1"
django-crispy-forms = "1.14.0"
django-import-export = "~=2.9.0"
djangorestframework = "3.14.0"
django-filter = "2.4.0"
django-rest-polymorphic = "0.1.10"
XlsxWriter = "1.4.5"
rules = "<4"
celery = ">=5.2.7,<6"
redis = "<5"
pysolr = "<4"
django-haystack = "<4"
django-select2 = "<8"
django-better-admin-arrayfield = "<2"
django-storages = "~=1.13.1"
boto3 = "~=1.24.4"
django-simple-history = "~=3.1.1"
django-constance = {version = "~=2.9.0", extras = ["database"]}
wagtail = "2.13.4"
PyNaCl = "~=1.5.0"
django-nested-admin = "3.4.0"
sentry-sdk = "1.9.8"
wagtailmenus = "3.1.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
coverage = "~=6.4.1"
pytest-django = "~=4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dll.configuration.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.black]
	extend-exclude = "migrations"
