[tool.poetry]
name = "digital.learning.lab"
version = "0.1.0"
description = "The digital.learning.lab is a online platform and understands itself as competence centre for teaching in the digital age. School teachers will find suggestions and inspiration here for further developing their lessons, taking into account the competencies for a digitalised living and working environment."
authors = ["ITBH"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~=3.8"
Django = "3.2.18"
psycopg2 = {version = "2.9.5", extras = ["binary"]}
django-meta = "2.1.0"
django-webpack-loader = "==1.8.1"
django-extensions = "3.2.1"
django-filer = "2.2.4"
django-polymorphic = "3.1.0"
blessings = "1.7"
curtsies = "0.4.1"
bpython = "0.24"
django-taggit = "2.1.0"
xlrd = "2.0.1"
environs = "9.5.0"
uWSGI = "2.0.21"
easy-thumbnails = "2.8.5"
django-ckeditor = "6.5.1"
django-crispy-forms = "1.14.0"
django-import-export = "==2.9.0"
djangorestframework = "3.14.0"
django-filter = "2.4.0"
django-rest-polymorphic = "0.1.10"
XlsxWriter = "1.4.5"
rules = "==3.3"
celery = "==5.2.7"
redis = "==4.5.1"
pysolr = "==3.9.0"
django-haystack = "==3.2.1"
django-select2 = "==8.1.0"
django-better-admin-arrayfield = "==1.4.2"
django-storages = "==1.13.2"
boto3 = "==1.26.82"
django-simple-history = "==3.2.0"
django-constance = {version = "==2.9.1", extras = ["database"]}
wagtail = "3.0.3"
PyNaCl = "==1.5.0"
django-nested-admin = "4.0.2"
sentry-sdk = "1.16.0"
wagtailmenus = "3.1.5"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
coverage = "==7.2.1"
pytest-django = "==4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ds=dll.configuration.test_settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.black]
	extend-exclude = "migrations"
